# parol6-ros2

./: CMakeLists.txt  Dockerfile  README.md  package.xml
.github/workflows/: docker-image.yml
config/: controller.yaml  joint_states.rviz
launch/: parol6.launch.py
meshes/: L4.stl  L6.stl
script/: entrypoint
urdf/: PAROL6.urdf  gazebo.xacro  world.sdf
