<package format="2">
  <name>parol6</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for PAROL6</p>
    <p>This package contains configuration data, 3D models and launch files
for PAROL6 robot</p>
  </description>
  <maintainer email="jiasenwu@hotmail.com" />
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>sdformat_urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
